# ai-think-scraping

./: .gitignore  .pre-commit-config.yaml  GUIDE.md  LEEME.md  LICENSE  README.md  notas  pyproject.toml
docs/: ARCHITECTURE.md  EXAMPLES.md  README.md
src/: __init__.py  abstractions.py  base_scraper.py  cli.py  config.py  http_client.py  json_storage.py  models.py  orchestrator.py  parsers.py  scraper_factory.py  scrapers.py
tests/: __init__.py  test_abstractions.py  test_cli.py  test_implementations.py  test_models.py  test_orchestrator.py  test_scrapers.py
